# pytest-setup-teardown

./: conftest.py  pyproject.toml
tests/: test_simple.py  test_simple_yaml.yaml  test_try_except_else_finally.py
